# paddle-ocr-learning

./: instructions.txt  pyproject.toml
paddleocrlearning/: __main__.py  pdf_extractor.py
